# gaugereader

./: .gitignore  default.nix  gaugereader.cabal  shell.nix  stack.yaml
src/: Main.hs
src/GaugeReader/: Color.hs  FrameIO.hs  Hough.hs
